# confirm_library

./: Readme.md  pyproject.toml  test_confirm.py
src/confirm_library/: __init__.py  core.py
