[project]
name = "confirm_library"   # nombre del proyecto (puede llevar guion)
version = "0.1.0"
description = "Utilidad para comprobar e instalar librerías de Python dinámicamente."
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]